# proximity_matcher_webservice

./: README.md  flake.nix  module.nix  overlay.nix  pyproject.toml  requirements.txt  shell.nix  test.nix
examples/software_heritage_licenses/: README.md  prepare_tlsh_hashes.py  test_licenses.py  walk_software_heritage_blobs.py
nix/: sources.json
src/: create_vpt_pickle.py  proximity_server.py  proximity_server_opt.py
src/proximity_matcher_webservice/: create_vpt_pickle.py  proximity_config.py  proximity_server.py  proximity_server_opt.py  run_proximity_matcher_server.py
src/proximity_matcher_webservice/vpt/: __init__.py
src/vpt/: __init__.py
